# icogrid

./: pyproject.toml
src/icogrid/: __init__.py  basics.py  skymap.py
test/: test_icogrid.py  test_skymap.py
