[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icogrid"
description = "Icosahedral grid generator with numba"
authors = [
  {name = "Taishi Hashimoto", email = "hashimoto.taishi@nipr.ac.jp"},
]
version = "1.0"
requires-python = ">= 3.7"
dependencies = [
    "numpy",
    "numba",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}
