[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icogrid"
description = "3-d quasi-equispaced angular grid based on icosahedral subdivision"
authors = [
  {name = "Taishi Hashimoto", email = "hashimoto.taishi@nipr.ac.jp"},
]
version = "1.0"
requires-python = ">= 3.7"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
    "jax",
]

[project.optional-dependencies]
test = [
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}
